[build-system]
requires = [
    "setuptools >= 61",
    "setuptools_scm >= 6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "asphalt-templating"
description = "Templating component for the Asphalt framework"
readme = "README.rst"
authors = [{name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"}]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Text Processing :: General",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "asphalt ~= 4.8",
    "Django >= 1.9.0; extra == 'django' or extra == 'doc' or extra == 'test'",
    "Mako >= 1.0.1; extra == 'mako' or extra == 'doc' or extra == 'test'",
    "Jinja2 >= 2.7.3; extra == 'jinja2' or extra == 'doc' or extra == 'test'",
    "tornado >= 4.3.0; extra == 'tornado' or extra == 'doc' or extra == 'test'"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/asphalt-framework/asphalt-templating"

[project.optional-dependencies]
django = []
mako = []
jinja2 = []
tornado = []
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]
doc = [
    "Sphinx >= 1.5",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints >= 1.0.5",
    "sphinxcontrib-asyncio >= 0.2.0",
]

[project.entry-points."asphalt.components"]
templating = "asphalt.templating.component:TemplatingComponent"

[project.entry-points."asphalt.templating.renderers"]
django = "asphalt.templating.renderers.django:DjangoRenderer"
jinja2 = "asphalt.templating.renderers.jinja2:Jinja2Renderer"
mako = "asphalt.templating.renderers.mako:MakoRenderer"
tornado = "asphalt.templating.renderers.tornado:TornadoRenderer"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.isort]
skip_gitignore = true
profile = "black"

[tool.flake8]
max-line-length = 99

[tool.pytest.ini_options]
addopts = "-rsx --tb=short"
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.7"
ignore_missing_imports = true

[tool.coverage.run]
source = ["asphalt.templating"]
relative_files = true
branch = true

[tool.coverage.report]
show_missing = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py38, py39, py310, py311, pypy3
skip_missing_interpreters = true
isolated_build = true

[testenv]
extras = test
commands = python -m pytest {posargs}

[testenv:docs]
extras = doc
commands = sphinx-build docs build/sphinx
"""
