[metadata]
name = asphalt-templating
description = Templating component for the Asphalt framework
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
url = https://github.com/asphalt-framework/asphalt-templating
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Text Processing :: General
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    = src
packages = find_namespace:
install_requires =
    asphalt ~= 4.6.0
    typeguard ~= 2.0

[options.packages.find]
where = src

[options.extras_require]
django = Django >= 1.9.0
mako = Mako >= 1.0.1
jinja2 = Jinja2 >= 2.7.3
tonnikala = tonnikala >= 1.0.0b1
tornado = tornado >= 4.3.0
test =
    pytest
    pytest-cov
    pytest-asyncio
doc =
    Sphinx >= 1.5
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.0.5
    sphinxcontrib-asyncio >= 0.2.0

[options.entry_points]
asphalt.components =
    templating = asphalt.templating.component:TemplatingComponent
asphalt.templating.renderers =
    django = asphalt.templating.renderers.django:DjangoRenderer [django]
    jinja2 = asphalt.templating.renderers.jinja2:Jinja2Renderer [jinja2]
    mako = asphalt.templating.renderers.mako:MakoRenderer [mako]
    tonnikala = asphalt.templating.renderers.mako:TonnikalaRenderer [tonnikala]
    tornado = asphalt.templating.renderers.tornado:TornadoRenderer [tornado]
